--- a/lesson6/lesson6_student.rmd
+++ b/lesson6/lesson6_student.rmd
@@ -6,10 +6,44 @@ Notes:
 
 ***
 
+```{r load and launch}
+setwd("~/Udacity/dataAnalysisR/EDA_R_Udacity/lesson6")
+library(ggplot2)
+library(gridExtra)
+library(dplyr)
+library('alr3')
+library("GGally")
+library('reshape2')
+data(diamonds)
+names(diamonds)
+str(diamonds)
+```
+
 ### Scatterplot Review
 
 ```{r Scatterplot Review}
+# Let's start by examining two variables in the data set.
+# The scatterplot is a powerful tool to help you understand
+# the relationship between two continuous variables.
 
+# We can quickly see if the relationship is linear or not.
+# In this case, we can use a variety of diamond
+# characteristics to help us figure out whether
+# the price advertised for any given diamond is 
+# reasonable or a rip-off.
+
+# Let's consider the price of a diamond and it's carat weight.
+# Create a scatterplot of price (y) vs carat weight (x).
+
+# Limit the x-axis and y-axis to omit the top 1% of values.
+
+# ENTER YOUR CODE BELOW THIS LINE
+# ================================================================
+
+ggplot(data = diamonds, aes(x=carat, y = price)) +
+  scale_x_continuous(lim = c(0,quantile(diamonds$carat, 0.99))) +
+  scale_y_continuous(lim = c(0,quantile(diamonds$price, 0.99))) +
+  geom_point(fill = I('#F79420'), color = I('black'), shape = 21)
 ```
 
 ***
@@ -24,7 +58,7 @@ Notes:
 
 #### A diamonds is
 
-
+#eventually converted to graphite.#
 ***
 
 ### The Rise of Diamonds
@@ -37,14 +71,14 @@ Notes:
 
 ```{r ggpairs Function}
 # install these if necessary
-install.packages('GGally')
-install.packages('scales')
-install.packages('memisc')
-install.packages('lattice')
-install.packages('MASS')
-install.packages('car')
-install.packages('reshape')
-install.packages('plyr')
+#install.packages('GGally')
+#install.packages('scales')
+#install.packages('memisc')
+#install.packages('lattice')
+#install.packages('MASS')
+#install.packages('car')
+#install.packages('reshape')
+#install.packages('plyr')
 
 # load the ggplot graphics package and the others
 library(ggplot2)
@@ -59,7 +93,7 @@ ggpairs(diamond_samp, params = c(shape = I('.'), outlier.shape = I('.')))
 ```
 
 What are some things you notice in the ggpairs output?
-Response:
+Response:  Strong correlation between price and dimensions.
 
 ***
 
@@ -67,6 +101,37 @@ Response:
 Notes:
 
 ```{r The Demand of Diamonds}
+# Create two histograms of the price variable
+# and place them side by side on one output image.
+
+# We've put some code below to get you started.
+
+# The first plot should be a histogram of price
+# and the second plot should transform
+# the price variable using log10.
+
+# Set appropriate bin widths for each plot.
+# ggtitle() will add a title to each histogram.
+
+# You can self-assess your work with the plots
+# in the solution video.
+
+# ALTER THE CODE BELOW THIS LINE
+# ==============================================
+
+library(gridExtra)
+
+plot1 <- ggplot(data = diamonds, aes(x = price)) +
+  geom_histogram(fill = 'red', color = 'black') +
+  ggtitle('Price')
+
+plot2 <- ggplot(data = diamonds, aes(x = price)) +
+  geom_histogram(fill = 'red', color = 'black') +
+  scale_x_log10() +
+  ggtitle('Price (log10)') +
+  xlab('log10(Price)')
+
+grid.arrange(plot1, plot2, ncol = 2)
 
 ```
 
@@ -90,7 +155,11 @@ Notes:
 cuberoot_trans = function() trans_new('cuberoot', transform = function(x) x^(1/3),
                                       inverse = function(x) x^3)
 ```
+Notes:
 
+Basic Functions in R:
+
+https://www.youtube.com/watch?v=Z1wB1rHAYzQ&list=PLOU2XLYxmsIK9qQfztXeybpHvru-TrqAP
 #### Use the cuberoot_trans function
 ```{r Use cuberoot_trans}
 ggplot(aes(carat, price), data = diamonds) + 
