--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -7,6 +7,15 @@ output: html_document
 
 #Introduction#
 
+Recent news media coverage and my own personal interest inspired me to explore a school vaccination data set for WA state.  WA DOH employees generously assembled 3 data sets for my project for school years 2011-2012, 2012-2013, and 2013-2014.  The 2011-2012 set is the most comprehensive in terms of school covered and relavant fields.  I will use the following approach:
+
+- Align 2012 and 2013 data with 2011 data, clean, and homogenize
+- Tidy the data
+- Concatonate the data
+- Merge with demographic data
+- Explore the data
+
+###Set Path and Load Libraries###
 
 ```{r setpath}
 setwd("~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject")
@@ -22,27 +31,30 @@ library(GGally)
 library(reshape2)
 library(acs) #to access census data
 library(tidyr) #bare bones data tidying library
-#test
 
 ```
 
-other data sets for vaccination
+###Load WA DOH Data Sets###
 
-
+Named data sets based on starting year of school year.  That is also how the year variable was assigned.  So 2011 referese to the school year (SY) 2011-2012
 
 ```{r load school vaccination exemption data sets}
 
-#WA DOH SY 2011-2012 K12
-doh_K12_2011to2012 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2011.csv')
+#WA DOH SY 2011-2012 K-12
+doh_K12_2011 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2011.csv')
 
-#WA DOH SY 2012-2013 K12
-doh_k12_2012to2013 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2012.csv')
+#WA DOH SY 2012-2013 K-12
+doh_k12_2012 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2012.csv')
 
-#WA doh SY 2013-2014 K12
-doh_k12_2013to2014 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2013.csv')
+#WA doh SY 2013-2014 K-12
+doh_k12_2013 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2013.csv')
 ```
 
-```{r data structures and names}
+###Align Columns to 2011 Set###
+Initial cleaning etc. may be clunky and manual.  I intend to semi-automate this with a pipeline prior to project completion.
 
+```{r align to 2011: Add year}
+doh_K12_2011to2012
 ```
+
 
