--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -41,20 +41,31 @@ Named data sets based on starting year of school year.  That is also how the yea
 ```{r load school vaccination exemption data sets}
 
 #WA DOH SY 2011-2012 K-12
-doh_K12_2011 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2011.csv')
+doh_k12_2011<- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2011.csv')
 
 #WA DOH SY 2012-2013 K-12
-doh_k12_2012 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2012.csv')
+doh_k12_2012<- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2012.csv')
 
 #WA doh SY 2013-2014 K-12
-doh_k12_2013 <- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2013.csv')
+doh_k12_2013<- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2013.csv')
+```
+###Data Audit###
+Most of the audit was done through simple visual inspection.  
+
+```{r Data Audit}
+
 ```
 
 ###Align Columns to 2011 Set###
 Initial cleaning etc. may be clunky and manual.  I intend to semi-automate this with a pipeline prior to project completion.
 
-```{r align to 2011: Add year}
-doh_K12_2011to2012
+```{r align to 2011}
+#add Year
+doh_k12_2012$Year = 2012
+doh_k12_2013$Year= 2013
+
+#drop Data.Source
+doh_k12_2012$Data.Source <- NULL
 ```
 
 
