--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -107,6 +107,15 @@ summary(schoolcode_2011_unique$School.County == 'KING')
 ```
 The 2012 data set is missing address data, but there are only 31 unique school codes in this data set, so there are only 31 missing addresses.
 
+Going to rename the 2011 columns.
+
+
+
+```{r rename columns}
+colnames_2011 = c('year','school_code','school_name','school_type','school_street','school_city','school_state','school_zip','school_county','school_district','district_code','grade_levels','reported','enrolled','exempt','percent_exempt','medical_exempt','percent_medical_exempt','personal_exempt','percent_personal_exempt','religious_exempt','percent_religious_exempt','exempt_DTTd','exempt_pertussis','exempt_polio','exempt_measles','exempt_mumps','exempt_rubella','exempt_hepB','exempt_varicella')
+
+colnames(doh_k12_2011) <- colnames_2011
+```
 
 ```{r align data to 2011 part 2}
 
