Add and drop columns from 2012, rename 2012 columns

--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -69,6 +69,14 @@ doh_k12_2012$Data.Source <- NULL
 
 #rename 2013 School Code
 names(doh_k12_2013)[names(doh_k12_2013) == 'School.Building.Code'] <- 'School.Code'
+
+#drop 2012 K.12.Number.Complete
+doh_k12_2012$K.12.Number.Complete <- NULL
+
+#add columns to 2012:
+doh_k12_2012$school_street = 'placeholder'
+doh_k12_2012$school_city = 'placeholder'
+doh_k12_2012$distric_code = 0000
 ```
 
 ###Align School and District information to 2011 with a Merge###
@@ -115,6 +123,12 @@ Going to rename the 2011 columns.
 colnames_2011 = c('year','school_code','school_name','school_type','school_street','school_city','school_state','school_zip','school_county','school_district','district_code','grade_levels','reported','enrolled','exempt','percent_exempt','medical_exempt','percent_medical_exempt','personal_exempt','percent_personal_exempt','religious_exempt','percent_religious_exempt','exempt_DTTd','exempt_pertussis','exempt_polio','exempt_measles','exempt_mumps','exempt_rubella','exempt_hepB','exempt_varicella')
 
 colnames(doh_k12_2011) <- colnames_2011
+
+colnames_2012 = c('school_code','school_name','school_type','school_district','school_county','reported','grade_levels','enrolled','exempt','medical_exempt','personal_exempt','religious_exempt','religious_member_exempt','exempt_DTTd','exempt_pertussis','exempt_polio','exempt_MMR','exempt_hepB','exempt_varicella','year','district_code','school_street','school_city')
+
+colnames(doh_k12_2012) <- colnames_2012
+
+col
 ```
 
 ```{r align data to 2011 part 2}
